Workaround to 100vh height issue on mobile devices

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -23,7 +23,7 @@ html {
 .mobile-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   justify-content: space-between;
 }
 
